objects/CPM__c.object
<CustomObject>
    <fields>
        <fullName>Potential_Igm_Impact_3__c</fullName>
        <label>Potential IGM% Impact 3</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pricing_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPM_DataihAw20</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Team__c</fullName>
        <label>Pricing Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bid</fullName>
                </value>
                <value>
                    <fullName>Remediation</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Probability_1_M__c</fullName>
        <label>Probability % 1</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Probability_1__c</fullName>
        <label>Probability % 1</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Probability_2_M__c</fullName>
        <label>Probability % 2</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Probability_2__c</fullName>
        <label>Probability % 2</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Probability_3_M__c</fullName>
        <label>Probability % 3</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Probability_3__c</fullName>
        <label>Probability % 3</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Public_Sector_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Public Sector Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPM_Data19</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Managing Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPM_Data15</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_VP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VP Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPM_Data14</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remainder_Email_On__c</fullName>
        <label>Remainder Email On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reminder_Email_Time__c</fullName>
        <formula>text(ROUND((NOW() - Remainder_Email_On__c)*24,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reminder Email Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminders_Sent__c</fullName>
        <formula>FLOOR(Amount_of_Days__c/ 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reminders Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Options__c</fullName>
        <label>Renewal Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rest_of_Core__c</fullName>
        <description>Rest of Core Price Lock</description>
        <label>Rest of Core Price Lock (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVP_CPD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Senior Vice President CPD</description>
        <label>SVP CPD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Managing_Director__c</fullName>
        <formula>Sales_Rep_Name__r.Manager.Manager.FirstName  &amp; &quot; &quot; &amp;  Sales_Rep_Name__r.Manager.Manager.LastName</formula>
        <label>Sales Rep Managing Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name_Opportunity__c</fullName>
        <formula>Hyperlink(Support_Number__r.WRF_Opportunity__r.Owner.Id, Support_Number__r.WRF_Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp; 
 Support_Number__r.WRF_Opportunity__r.Owner.LastName)</formula>
        <label>Sales Rep Name (Opportunity)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep Name (WRF)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPM_DataihAh10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name_auto__c</fullName>
        <formula>hyperlink(Account_Name__r.Sales_PersonID__r.User__r.Id, Account_Name__r.Sales_PersonID__r.User__r.FirstName &amp; &quot; &quot; &amp; Account_Name__r.Sales_PersonID__r.User__r.LastName, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Opportunity_Notes__c</fullName>
        <label>Sales Rep Opportunity Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scenario__c</fullName>
        <label>Scenario</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send_Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sr_Vice_President__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>President</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPM_Data11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_Approval_Start_DateTime__c</fullName>
        <label>Step Approval Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Support_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CPMs</relationshipLabel>
        <relationshipName>Case_CPM_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Requester__c</fullName>
        <formula>Support_Number__r.WRF_Requestor__r.FirstName &amp; &quot; &quot; &amp; Support_Number__r.WRF_Requestor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Requester</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Subject__c</fullName>
        <formula>Support_Number__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_IMU__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>TECH IGM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Term_End_Date__c</fullName>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Start_Date__c</fullName>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Toner_Cap_Impact__c</fullName>
        <label>Toner Cap Impact</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Toner_Price_Cap__c</fullName>
        <label>Toner Price Cap</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Toner__c</fullName>
        <description>Toner Price Lock</description>
        <label>Toner Price Lock (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cash_Outflow__c</fullName>
        <label>Total Cash Outflow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Revenue_Gross__c</fullName>
        <label>Prospective Contract Revenue (Gross)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Revenue_Net__c</fullName>
        <label>Prospective Contract Revenue (Net)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Approval__c</fullName>
        <label># of Hours in Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_NPV__c</fullName>
        <label>Total NPV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Net_Inflow__c</fullName>
        <label>Total Net Inflow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_A_R__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SVP ADJ&amp;PUBLIC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPM_Data12</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VP_CBFS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vice President CBFS</description>
        <label>VP CBFS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPMs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VP_Field_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SVP Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPM_Data13</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VP_Furniture__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vice President Furniture</description>
        <label>VP Furniture</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPMs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VP_SOPS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VP SOPS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPM_Data29</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Variable_Selling_Payroll__c</fullName>
        <label>Variable Selling Payroll</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Program_Historical__c</fullName>
        <description>Historical Information (12 months)</description>
        <label>Historical Vendor Program $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Program_TDC_Markup__c</fullName>
        <label>Vender Program</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Version_Scenario__c</fullName>
        <formula>Value(Text(Scenario__c) + &apos;.&apos; + IF(LEN(text(Version__c)) = 2, text(Version__c), &apos;0&apos; + text(Version__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version.Scenario</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version #</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warehouse_Labor__c</fullName>
        <label>Warehouse Labor $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Warehouse_Supplies__c</fullName>
        <label>Warehouse Supplies $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Written_Agreement__c</fullName>
        <label>Written Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1_Amount__c</fullName>
        <description>1st Incentive</description>
        <label>1 - Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_Notes__c</fullName>
        <label>1 - Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1_Tied_to_Performance__c</fullName>
        <label>1 - Tied to Performance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1_Type__c</fullName>
        <description>1st Incentive</description>
        <label>1 - Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2 - Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2_Notes__c</fullName>
        <label>2 - Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2_Tied_to_Performance__c</fullName>
        <label>2 - Tied to Performance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2_Type__c</fullName>
        <label>2 - Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>3 - Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X3_Notes__c</fullName>
        <label>3 - Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X3_Tied_to_Performance__c</fullName>
        <label>3 - Tied to Performance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3_Type__c</fullName>
        <label>3 - Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_1_Cash_Outflow__c</fullName>
        <label>Year 1 Cash Outflow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_1_NPV__c</fullName>
        <label>Year 1 NPV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_1_Net_Inflow__c</fullName>
        <label>Year 1 Net Inflow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_2_Cash_Outflow__c</fullName>
        <label>Year 2 Cash Outflow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_2_NPV__c</fullName>
        <label>Year 2 NPV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_2_Net_Inflow__c</fullName>
        <label>Year 2 Net Inflow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_3_Cash_Outflow__c</fullName>
        <label>Year 3 Cash Outflow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_3_NPV__c</fullName>
        <label>Year 3 NPV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_3_Net_Inflow__c</fullName>
        <label>Year 3 Net Inflow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_4__c</fullName>
        <description>Cell O33 in CPM - &quot;Year 4&quot; or &quot;Remaining Years&quot;</description>
        <label>Year 4</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_5__c</fullName>
        <description>Cell R33 in CPM - &quot;Year 5&quot; or &quot;Last Year&quot;</description>
        <label>Year 5</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>on_Core_Historical__c</fullName>
        <description>Historical Information (12 months)</description>
        <label>% On Customer Core List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>on_Core_Projected__c</fullName>
        <label>% On Core Item Lists</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>CPM</label>
    <listViews>
        <fullName>Account_Like</fullName>
        <columns>NAME</columns>
        <columns>Total_Hours_Approval__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Support_Number__c</columns>
        <columns>Support_Subject__c</columns>
        <columns>Version_Scenario__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Closed</value>
        </filters>
        <filters>
            <field>Account_Name__c</field>
            <operation>contains</operation>
            <value>FoodBuy</value>
        </filters>
        <label>Account Like</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Total_Hours_Approval__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Support_Number__c</columns>
        <columns>Support_Subject__c</columns>
        <columns>Version_Scenario__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Closed</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Compliance_CPM</fullName>
        <filterScope>Queue</filterScope>
        <label>Compliance</label>
        <queue>Compliance</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pricing_compliance_CPM</fullName>
        <filterScope>Queue</filterScope>
        <label>Pricing compliance</label>
        <queue>Pricing_compliance</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>CPM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>